week12/#daonguoc.c#
Welcome to the Emacs shell

~/Desktop/Cintro/week12 $ gcc -o daonguoc daonguoc.c
~/Desktop/Cintro/week12 $ ./daonguoc
Nhap x: 234567
7654332764
~/Desktop/Cintro/week12 $ ./daonguoc
Nhap x: 123
328
~/Desktop/Cintro/week12 $ ./daonguoc
Nhap x: 1234
43248
~/Desktop/Cintro/week12 $ gcc -o daonguoc daonguoc.c
daonguoc.c: In function ‘reverseInt’:
daonguoc.c:7:16: error: ‘n’ undeclared (first use in this function)
   for( i=0; i<=n; i++){
                ^
daonguoc.c:7:16: note: each undeclared identifier is reported only once for each function it appears in
daonguoc.c:8:16: error: ‘a’ undeclared (first use in this function)
   printf("%d", a[i]);
                ^
daonguoc.c: In function ‘main’:
daonguoc.c:32:14: warning: passing argument 1 of ‘reverseInt’ makes integer from pointer without a cast [-Wint-conversion]
   reverseInt(&x);
              ^
daonguoc.c:5:6: note: expected ‘int’ but argument is of type ‘int *’
 void reverseInt(int x){
      ^
~/Desktop/Cintro/week12 $ 
~/Desktop/Cintro/week12 $ gcc -o daonguoc daonguoc.c 
daonguoc.c:1:1: error: unknown type name ‘Welcome’
 Welcome to the Emacs shell
 ^
daonguoc.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘the’
 Welcome to the Emacs shell
            ^
daonguoc.c:1:12: error: unknown type name ‘the’
daonguoc.c:14:1: error: stray ‘\342’ in program
 daonguoc.c: In function ‘reverseInt’:
 ^
daonguoc.c:14:1: error: stray ‘\200’ in program
daonguoc.c:14:1: error: stray ‘\230’ in program
daonguoc.c:14:1: error: stray ‘\342’ in program
daonguoc.c:14:1: error: stray ‘\200’ in program
daonguoc.c:14:1: error: stray ‘\231’ in program
daonguoc.c:15:1: error: stray ‘\342’ in program
 daonguoc.c:7:16: error: ‘n’ undeclared (fi
 ^
daonguoc.c:15:1: error: stray ‘\200’ in program
daonguoc.c:15:1: error: stray ‘\230’ in program
daonguoc.c:15:1: error: stray ‘\342’ in program
daonguoc.c:15:1: error: stray ‘\200’ in program
daonguoc.c:15:1: error: stray ‘\231’ in program
daonguoc.c:16:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<=’ token
    for( i=0; i<=n; i++){
               ^
daonguoc.c:16:21: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
    for( i=0; i<=n; i++){
                     ^
daonguoc.c:19:1: error: stray ‘\342’ in program
 daonguoc.c:8:16: error: ‘a’ undeclared (fi
 ^
daonguoc.c:19:1: error: stray ‘\200’ in program
daonguoc.c:19:1: error: stray ‘\230’ in program
daonguoc.c:19:1: error: stray ‘\342’ in program
daonguoc.c:19:1: error: stray ‘\200’ in program
daonguoc.c:19:1: error: stray ‘\231’ in program
daonguoc.c:22:1: error: stray ‘\342’ in program
 daonguoc.c: In function ‘main’:
 ^
daonguoc.c:22:1: error: stray ‘\200’ in program
daonguoc.c:22:1: error: stray ‘\230’ in program
daonguoc.c:22:1: error: stray ‘\342’ in program
daonguoc.c:22:1: error: stray ‘\200’ in program
daonguoc.c:22:1: error: stray ‘\231’ in program
daonguoc.c:23:1: error: stray ‘\342’ in program
 daonguoc.c:32:14: warning: passing argument 1 
 ^
daonguoc.c:23:1: error: stray ‘\200’ in program
daonguoc.c:23:1: error: stray ‘\230’ in program
daonguoc.c:23:1: error: stray ‘\342’ in program
daonguoc.c:23:1: error: stray ‘\200’ in program
daonguoc.c:23:1: error: stray ‘\231’ in program
daonguoc.c:26:1: error: stray ‘\342’ in program
 daonguoc.c:5:6: note: expected ‘int’ but a
 ^
daonguoc.c:26:1: error: stray ‘\200’ in program
daonguoc.c:26:1: error: stray ‘\230’ in program
daonguoc.c:26:1: error: stray ‘\342’ in program
daonguoc.c:26:1: error: stray ‘\200’ in program
daonguoc.c:26:1: error: stray ‘\231’ in program
daonguoc.c:26:1: error: stray ‘\342’ in program
daonguoc.c:26:1: error: stray ‘\200’ in program
daonguoc.c:26:1: error: stray ‘\230’ in program
daonguoc.c:26:1: error: stray ‘\342’ in program
daonguoc.c:26:1: error: stray ‘\200’ in program
daonguoc.c:26:1: error: stray ‘\231’ in program
~/Desktop/Cintro/week12 $ clear






































~/Desktop/Cintro/week12 $ 
~/Desktop/Cintro/week12 $ gcc -o daonguoc daonguoc.c
daonguoc.c:1:1: error: unknown type name ‘Welcome’
 Welcome to the Emacs shell
 ^
daonguoc.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘the’
 Welcome to the Emacs shell
            ^
daonguoc.c:1:12: error: unknown type name ‘the’
daonguoc.c:14:1: error: stray ‘\342’ in program
 daonguoc.c: In function ‘reverseInt’:
 ^
daonguoc.c:14:1: error: stray ‘\200’ in program
daonguoc.c:14:1: error: stray ‘\230’ in program
daonguoc.c:14:1: error: stray ‘\342’ in program
daonguoc.c:14:1: error: stray ‘\200’ in program
daonguoc.c:14:1: error: stray ‘\231’ in program
daonguoc.c:15:1: error: stray ‘\342’ in program
 daonguoc.c:7:16: error: ‘n’ undeclared (f
 ^
daonguoc.c:15:1: error: stray ‘\200’ in program
daonguoc.c:15:1: error: stray ‘\230’ in program
daonguoc.c:15:1: error: stray ‘\342’ in program
daonguoc.c:15:1: error: stray ‘\200’ in program
daonguoc.c:15:1: error: stray ‘\231’ in program
daonguoc.c:16:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<=’ token
    for( i=0; i<=n; i++){
               ^
daonguoc.c:16:21: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘++’ token
    for( i=0; i<=n; i++){
                     ^
daonguoc.c:19:1: error: stray ‘\342’ in program
 daonguoc.c:8:16: error: ‘a’ undeclared (f
 ^
daonguoc.c:19:1: error: stray ‘\200’ in program
daonguoc.c:19:1: error: stray ‘\230’ in program
daonguoc.c:19:1: error: stray ‘\342’ in program
daonguoc.c:19:1: error: stray ‘\200’ in program
daonguoc.c:19:1: error: stray ‘\231’ in program
daonguoc.c:22:1: error: stray ‘\342’ in program
 daonguoc.c: In function ‘main’:
 ^
daonguoc.c:22:1: error: stray ‘\200’ in program
daonguoc.c:22:1: error: stray ‘\230’ in program
daonguoc.c:22:1: error: stray ‘\342’ in program
daonguoc.c:22:1: error: stray ‘\200’ in program
daonguoc.c:22:1: error: stray ‘\231’ in program
daonguoc.c:23:1: error: stray ‘\342’ in program
 daonguoc.c:32:14: warning: passing argument 1
 ^
daonguoc.c:23:1: error: stray ‘\200’ in program
daonguoc.c:23:1: error: stray ‘\230’ in program
daonguoc.c:23:1: error: stray ‘\342’ in program
daonguoc.c:23:1: error: stray ‘\200’ in program
daonguoc.c:23:1: error: stray ‘\231’ in program
daonguoc.c:26:1: error: stray ‘\342’ in program
 daonguoc.c:5:6: note: expected ‘int’ but 
 ^
daonguoc.c:26:1: error: stray ‘\200’ in program
daonguoc.c:26:1: error: stray ‘\230’ in program
daonguoc.c:26:1: error: stray ‘\342’ in program
daonguoc.c:26:1: error: stray ‘\200’ in program
daonguoc.c:26:1: error: stray ‘\231’ in program
daonguoc.c:26:1: error: stray ‘\342’ in program
daonguoc.c:26:1: error: stray ‘\200’ in program
daonguoc.c:26:1: error: stray ‘\230’ in program
daonguoc.c:26:1: error: stray ‘\342’ in program
daonguoc.c:26:1: error: stray ‘\200’ in program
daonguoc.c:26:1: error: stray ‘\231’ in program
~/Desktop/Cintro/week12 $ gcc -o daonguoc daonguoc2.c
~/Desktop/Cintro/week12 $ ./daonguoc 
Nhap x: 1234
0 4 0
~/Desktop/Cintro/week12 $ gcc -o daonguoc daonguoc2.c
~/Desktop/Cintro/week12 $ ./daonguoc 
Nhap x: 1234
So dao nguoc la: 4321-571773520
~/Desktop/Cintro/week12 $ ./daonguoc 
Nhap x: 12
So dao nguoc la: 21744326160
~/Desktop/Cintro/week12 $ ./daonguoc 
Nhap x: 123
So dao nguoc la: 32132713
~/Desktop/Cintro/week12 $ ./daonguoc 
Nhap x: 12345
So dao nguoc la: 5432132764
~/Desktop/Cintro/week12 $ gcc -o daonguoc daonguoc2.c
~/Desktop/Cintro/week12 $ ./daonguoc 
Nhap x: 1234
So dao nguoc la: a[0] = 4
a[1] = 3
a[2] = 2
a[3] = 1
a[4] = 516430608

~/Desktop/Cintro/week12 $ gcc -o daonguoc daonguoc2.c
~/Desktop/Cintro/week12 $ ./daonguoc 
Nhap x: 123
So dao nguoc la: a[0] = 3
a[1] = 2
a[2] = 1

~/Desktop/Cintro/week12 $ gcc -o daonguoc daonguoc2.c
daonguoc2.c: In function ‘main’:
daonguoc2.c:26:12: warning: too many arguments for format [-Wformat-extra-args]
     printf("%d", i, a[i]);
            ^
~/Desktop/Cintro/week12 $ gcc -o daonguoc daonguoc2.c
~/Desktop/Cintro/week12 $ ./daonguoc 
Nhap x: 1234
So dao nguoc la: 4321
~/Desktop/Cintro/week12 $ 